fix: reduce spacing in categories container

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -24,7 +24,7 @@ content {
     overflow-x: scroll;
     border: 0;
     * {
-        margin-right: 10px;
+        margin-right: 5px;
     }
     .checkbox-label {
         background-color: #444;
